[package]
name = "prometheus-query"
version = "0.4.0"
authors = ["Allen George <allen.george@gmail.com>"]
edition = "2018"
description = "Prometheus HTTP query client"
repository = "https://github.com/allengeorge/prometheus-query/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["prometheus", "metrics"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
futures-stable = { version = "0.1", package = "futures" }
futures-preview = { version = "0.3.0-alpha.14", features = ["compat"] }
futures-util-preview = { version = "0.3.0-alpha.14"}
http = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
native-tls = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = "0.1"
url = "1.7"
url_serde = "0.2"
